--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/supertest": "^2.0.11",
     "aes-js": "^3.1.2",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-plugin-jest": "^24.3.6",
     "express": "^4.17.1",
